package edu.hitsz.aircraft;

/**
 * Factory interface for enemy creation.
 */
public interface IEnemyFactory {

    AbstractAircraft createEnemy();
}
