@startuml
title Enemy Factory Method Pattern

abstract class AbstractAircraft {
    # maxHp: int
    # hp: int
    + {abstract} shoot(): List<BaseBullet>
    + forward(): void
    + decreaseHp(int): void
    + getHp(): int
}

class MobEnemy {
    + shoot(): List<BaseBullet>
    + forward(): void
}

class EliteEnemy {
    + shoot(): List<BaseBullet>
    + forward(): void
}

class ElitePlusEnemy {
    + shoot(): List<BaseBullet>
    + forward(): void
}

class EliteProEnemy {
    + shoot(): List<BaseBullet>
    + forward(): void
}

interface IEnemyFactory {
    + createEnemy(): AbstractAircraft
}

class MobEnemyFactory {
    + createEnemy(): AbstractAircraft
}

class EliteEnemyFactory {
    + createEnemy(): AbstractAircraft
}

class ElitePlusEnemyFactory {
    + createEnemy(): AbstractAircraft
}

class EliteProEnemyFactory {
    + createEnemy(): AbstractAircraft
}

AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- EliteProEnemy

IEnemyFactory <|.. MobEnemyFactory
IEnemyFactory <|.. EliteEnemyFactory
IEnemyFactory <|.. ElitePlusEnemyFactory
IEnemyFactory <|.. EliteProEnemyFactory

MobEnemyFactory ..> MobEnemy
EliteEnemyFactory ..> EliteEnemy
ElitePlusEnemyFactory ..> ElitePlusEnemy
EliteProEnemyFactory ..> EliteProEnemy

@enduml
